更新人物至卷106節2
Former-commit-id: 4254c4a11011ea90fc29d2b4083d7271e43e7c92

--- a/2_世系圖表/2.2_并立政權/晉/諸慕容政權總圖.html
+++ b/2_世系圖表/2.2_并立政權/晉/諸慕容政權總圖.html
@@ -26,13 +26,13 @@
       <h1 class="crossnote-header" id="%E8%AB%B8%E6%85%95%E5%AE%B9%E6%94%BF%E6%AC%8A%E7%B8%BD%E5%9C%96">諸慕容政權總圖</h1>
 
 <ul>
-<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E6%85%95%E5%AE%B9%E9%AE%AE%E5%8D%91%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">慕容鮮卑</a>：諸慕容政權建立前世系</li>
+<li><a href="%E6%85%95%E5%AE%B9%E9%AE%AE%E5%8D%91%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">慕容鮮卑</a>：諸慕容政權建立前世系</li>
 <li>吐谷渾：慕容吐谷渾313年建立，斷續存在至唐朝，663年滅亡</li>
-<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%8D%81%E5%85%AD%E5%9C%8B/%E5%89%8D%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">前燕</a>：慕容廆奠基，慕容皝337年建立，後期主要靠慕容恪，370年被前秦滅</li>
-<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%8D%81%E5%85%AD%E5%9C%8B/%E5%BE%8C%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">後燕</a>：慕容垂384年建立，被北魏大幅度削弱，407/409年被北燕滅</li>
-<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E8%A5%BF%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">西燕</a>：慕容泓384年建立，一年死五帝，394年被後燕滅，十六國之外</li>
-<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%8D%81%E5%85%AD%E5%9C%8B/%E5%8D%97%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">南燕</a>: 慕容德398年建立，410年被南朝宋滅</li>
-<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%8D%81%E5%85%AD%E5%9C%8B/%E5%8C%97%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">北燕</a>：407/409年建立，延續後燕政權，但為漢/高句麗所建，非慕容氏</li>
+<li><a href="%E5%8D%81%E5%85%AD%E5%9C%8B/%E5%89%8D%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">前燕</a>：慕容廆奠基，慕容皝337年建立，後期主要靠慕容恪，370年被前秦滅</li>
+<li><a href="%E5%8D%81%E5%85%AD%E5%9C%8B/%E5%BE%8C%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">後燕</a>：慕容垂384年建立，被北魏大幅度削弱，407/409年被北燕滅</li>
+<li><a href="%E8%A5%BF%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">西燕</a>：慕容泓384年建立，一年死五帝，394年被後燕滅，十六國之外</li>
+<li><a href="%E5%8D%81%E5%85%AD%E5%9C%8B/%E5%8D%97%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">南燕</a>: 慕容德398年建立，410年被南朝宋滅</li>
+<li><a href="%E5%8D%81%E5%85%AD%E5%9C%8B/%E5%8C%97%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">北燕</a>：407/409年建立，延續後燕政權，但為漢/高句麗所建，非慕容氏</li>
 </ul>
 <div class="mermaid">graph TB
 
