--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -89,6 +89,7 @@
 <li>弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子、汲桑</li>
 <li>牧羊：楚義帝、卜式、路溫舒、劉盆子</li>
 <li>牧牛：鄧艾</li>
+<li>賣鞋：劉備、慕容永</li>
 <li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進</li>
 <li>屠夫家皇后：何皇后、謝玖</li>
 <li>力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥</li>
@@ -111,7 +112,7 @@
 <li>cosplay愛好者：濟東王劉彭離、漢靈帝</li>
 <li>女裝大佬：曹叡、何晏、王國寶</li>
 <li>娘砲：李固、曹植、何晏、唐伯虎</li>
-<li>僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生</li>
+<li>僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生、小野妹子</li>
 <li>著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰</li>
 <li>變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生</li>
 <li>屠伯：嚴延年、苟晞</li>
