--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -28,7 +28,7 @@
 <ul>
 <li>拒絕晉升：申包胥、王蠋、孔霸、劉愷、田疇、蔡謨</li>
 <li>拒絕稱帝王：季札、公子閭、劉虞</li>
-<li>拒絶出仕：辛謐</li>
+<li>拒絶出仕：辛謐、戴逵</li>
 <li>拒絶禪讓堅決弒君：石虎、張天錫</li>
 <li>後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎</li>
 <li>烹子食子：易牙、樂羊</li>
@@ -154,21 +154,22 @@
 <li>起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃</li>
 <li>女王范兒：郭女王、袁女皇</li>
 <li>不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞</li>
+<li>自築小屋：袁閎、申屠蟠</li>
+<li>商界精英：呂不韋、孟佗</li>
+<li>被姦尸：呂后、漢桓帝馮貴人</li>
+<li>心動救駕：金日磾、許褚</li>
+<li>自戀狂：何晏</li>
 <li>三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮</li>
 <li>兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛</li>
 <li>刺客不忍殺：趙盾、崔琦、蔡邕、許儒、李勢妹、姚襄</li>
 <li>極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉</li>
 <li>虐徒事件：黃石公+張良、郭泰+魏昭</li>
 <li>易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂</li>
-<li>相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾</li>
-<li>替身：劉邦-紀信、祖約-閻秃</li>
-<li>恥做乾兒子：秦始皇-嫪毐、張綉-曹操、張遇-苻健</li>
-<li>自築小屋：袁閎、申屠蟠</li>
-<li>商界精英：呂不韋、孟佗</li>
-<li>被姦尸：呂后、漢桓帝馮貴人</li>
-<li>心動救駕：金日磾、許褚</li>
-<li>自戀狂：何晏</li>
-<li>被打鷄血：石遵-冉閔(努力！事成，以爾為儲貳)、朱棣-朱高煦(勉之！世子多疾)</li>
+<li>相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾、苻堅+慕容沖</li>
+<li>替身：劉邦+紀信、祖約+閻秃</li>
+<li>恥做乾兒子：秦始皇+嫪毐、張綉+曹操、張遇+苻健</li>
+<li>鞭屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅</li>
+<li>被打鷄血：石遵+冉閔(努力！事成，以爾為儲貳)、朱棣+朱高煦(勉之！世子多疾)</li>
 </ul>
 <h1 id="雜說">雜說 </h1>
 <ul>
