更新至卷107節8，合併乞伏鮮卑至西秦世系
Former-commit-id: b98e3a75c7a3e619ca90996f9fa774f377986814

--- a/2_世系圖表/2.2_并立政權/晉/翟魏世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/翟魏世系圖表.html
@@ -25,7 +25,11 @@
       <div class="crossnote markdown-preview  ">
       
 <ul>
-<li>傳位圖</li>
+<li>傳位圖
+<ul>
+<li>日常性反復無常，388年慕容垂怒斬翟遼使者，翟遼索性自立門戶，自稱魏天王</li>
+</ul>
+</li>
 </ul>
 <div class="mermaid">graph TB
 
