更新至卷108節3
Former-commit-id: 4af9ccf8462ba9a3bb9c5b15f1258ef29da5edad

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -46,11 +46,11 @@
 <li>哭死哭瞎：子夏、張放、孝睦皇后、趙戩</li>
 <li>嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸</li>
 <li>疽發背死：范增、劉焉、曹休</li>
-<li>自焚：魏咎、涉間、孝平王皇后</li>
-<li>燒死：司馬乂</li>
+<li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂</li>
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
 <li>跳樓：揚雄、緑珠</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
+<li>被鬼怪嚇死：司馬懿、阮瞻、漢趙劉娥、姚萇、唐肅宗</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民</li>
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母</li>
 <li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父</li>
@@ -156,7 +156,7 @@
 <li>不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞</li>
 <li>自築小屋：袁閎、申屠蟠</li>
 <li>商界精英：呂不韋、孟佗</li>
-<li>被姦尸：呂后、漢桓帝馮貴人</li>
+<li>被姦尸：呂后、漢桓帝馮貴人、苻訓英</li>
 <li>心動救駕：金日磾、許褚</li>
 <li>自戀狂：何晏</li>
 <li>三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮</li>
