--- a/2_世系圖表/2.2_并立政權/晉/翟魏世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/翟魏世系圖表.html
@@ -24,10 +24,12 @@
     
       <div class="crossnote markdown-preview  ">
       
+<h1 id="翟魏世系圖表">翟魏世系圖表 </h1>
 <ul>
 <li>傳位圖
 <ul>
 <li>日常性反復無常，388年慕容垂怒斬翟遼使者，翟遼索性自立門戶，自稱魏天王</li>
+<li>翟釗被東晉、後燕攻，投奔西燕謀反被誅</li>
 </ul>
 </li>
 </ul>
