--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -47,7 +47,7 @@
 <li>哭死哭瞎：子夏、張放、孝睦皇后、趙戩</li>
 <li>嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸</li>
 <li>疽發背死：范增、劉焉、曹休</li>
-<li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂</li>
+<li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之</li>
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
 <li>跳樓：揚雄、緑珠</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
@@ -78,7 +78,7 @@
 <li>反戰為民：鞠彭</li>
 <li>嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃</li>
 <li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範</li>
-<li>長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先</li>
+<li>長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強</li>
 <li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安</li>
 <li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春</li>
 <li>醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉</li>
@@ -138,7 +138,7 @@
 <li>女反賊：呂母、遲昭平、徵側、徵貳、陳碩真</li>
 <li>女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后</li>
 <li>女智謀家：辛憲英、習英習</li>
-<li>女刺客：女艾、前秦楊皇后</li>
+<li>女刺客：女艾、前秦楊皇后、張貴人</li>
 <li>誓不改嫁：夏侯令女、前秦楊皇后</li>
 <li>女權主義者∶程咸</li>
 <li>白眉：劉曜</li>
