更新至卷111節5
Former-commit-id: f2a23dcfae533a62310515e753631c31346c4d10

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -33,7 +33,7 @@
 <li>後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎</li>
 <li>烹子食子：易牙、樂羊</li>
 <li>人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導</li>
-<li>厭勝制敵：王莽、司馬倫</li>
+<li>妖術制敵：王莽、司馬倫、王凝之</li>
 <li>愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩、陳安</li>
 <li>成功踏冰：劉秀、慕容皝、魏道武帝</li>
 <li>酷刑倖存者：尉古真</li>
@@ -52,6 +52,7 @@
 <li>跳樓：揚雄、緑珠</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
 <li>被鬼怪嚇死：司馬懿、阮瞻、漢趙劉娥、姚萇、唐肅宗</li>
+<li>醉死：劉曜、禿髪烏孤</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民</li>
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母</li>
 <li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父</li>
@@ -136,7 +137,7 @@
 <li>奇葩爵位：羹頡侯劉信、不義侯子密</li>
 <li>大預言家：辛憲英、申胤、黃泓、郭黁</li>
 <li>女反賊：呂母、遲昭平、徵側、徵貳、陳碩真</li>
-<li>女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后</li>
+<li>女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后、謝道韞</li>
 <li>女智謀家：辛憲英、習英習</li>
 <li>女刺客：女艾、前秦楊皇后、張貴人</li>
 <li>誓不改嫁：夏侯令女、前秦楊皇后</li>
