--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -61,7 +61,7 @@
 <li>救父：緹縈、馮緄</li>
 <li>被後媽虐：祖己、薛苞、蔣詡、李曇、王祥</li>
 <li>愚孝：祖己、孫性、李班</li>
-<li>愚忠：弘演、王累</li>
+<li>愚忠：弘演、王累、羅企生</li>
 <li>摳門：樊伷、曹洪、司馬騰、慕容評</li>
 <li>給君主獻孕婦：呂不韋、春申君</li>
 <li>龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡</li>
@@ -92,7 +92,7 @@
 <li>弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子、汲桑</li>
 <li>牧羊：楚義帝、卜式、路溫舒、劉盆子</li>
 <li>牧牛：鄧艾</li>
-<li>賣鞋：劉備、慕容永</li>
+<li>賣鞋：劉備、慕容永、劉裕</li>
 <li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進</li>
 <li>屠夫家皇后：何皇后、謝玖</li>
 <li>力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥</li>
