更新至卷112節2
Former-commit-id: c60c0905beb4271d1a4995814d4068e75c44d3fc

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -67,6 +67,7 @@
 <li>龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡</li>
 <li>口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞</li>
 <li>狐臭：楚懷王</li>
+<li>脫髮: 王莽、曹丕</li>
 <li>消渴(糖尿病)：司馬相如</li>
 <li>羸瘵(肺結核)：賀循</li>
 <li>陽痿：膠西王劉端、司馬保</li>
@@ -140,7 +141,7 @@
 <li>女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后、謝道韞</li>
 <li>女智謀家：辛憲英、習英習</li>
 <li>女刺客：女艾、前秦楊皇后、張貴人</li>
-<li>誓不改嫁：夏侯令女、前秦楊皇后</li>
+<li>誓不改嫁：夏侯令女、前秦楊皇后、呂纂楊皇后</li>
 <li>女權主義者∶程咸</li>
 <li>白眉：劉曜</li>
 <li>紅眼：劉曜</li>
