更新至卷112節10
Former-commit-id: 002276ed2dca66208fa4854b695c7f06785f257f

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -101,7 +101,7 @@
 <li>神童：項橐、甘羅、孔融、曹沖、周不疑</li>
 <li>常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆</li>
 <li>反復搖擺：徐龕、王擢、十六國張平、李辯</li>
-<li>猶豫不決：甘卓</li>
+<li>猶豫不決：甘卓、劉牢之</li>
 <li>死前暴擊：項羽、段文鴦、冉閔</li>
 <li>強力刺客：公孫述、任尚</li>
 <li>神射手：養由基、呂布、賈堅</li>
@@ -171,7 +171,7 @@
 <li>相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾、苻堅+慕容沖</li>
 <li>替身：劉邦+紀信、祖約+閻秃</li>
 <li>恥做乾兒子：秦始皇+嫪毐、張綉+曹操、張遇+苻健</li>
-<li>鞭屍戳屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅、魏道武帝+慕容詳</li>
+<li>鞭屍戳屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅、魏道武帝+慕容詳、桓玄+劉牢之</li>
 <li>被打鷄血：石遵+冉閔(努力！事成，以爾為儲貳)、朱棣+朱高煦(勉之！世子多疾)</li>
 <li>農夫與蛇：苻堅+姚萇、滕恬之+翟遼、沒奕干+赫連勃勃、禿髪傉檀+乞伏熾磐</li>
 </ul>
