更新至卷113節7
Former-commit-id: d9bc2de7b041d621cb50befb7701897e5acf912c

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -33,7 +33,7 @@
 <li>後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎</li>
 <li>烹子食子：易牙、樂羊</li>
 <li>人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導</li>
-<li>妖術制敵：王莽、司馬倫、王凝之</li>
+<li>妖術厭勝制敵：王莽、司馬倫、王凝之、桓溫</li>
 <li>愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩、陳安</li>
 <li>成功踏冰：劉秀、慕容皝、魏道武帝</li>
 <li>酷刑倖存者：尉古真</li>
@@ -149,6 +149,7 @@
 <li>三乳：李淵</li>
 <li>大頭：苻雄</li>
 <li>豁牙：慕容垂</li>
+<li>兔唇: 魏詠之</li>
 <li>巨人：阮翁仲、巨毋霸</li>
 <li>魔術師：黎軒善眩人、海西幻人</li>
 <li>萬人迷：黃憲、溫嶠</li>
