--- a/2_世系圖表/2.1_帝王/魏晉/晉朝世系圖.html
+++ b/2_世系圖表/2.1_帝王/魏晉/晉朝世系圖.html
@@ -278,7 +278,12 @@ class 司馬懿,司馬師,司馬昭 control
 司馬懿--&gt;司馬倫
 柏夫人--&gt;司馬倫
 </div><ul>
-<li>桓玄逼晉安帝禪讓</li>
+<li>桓玄逼晉安帝禪讓(403)
+<ul>
+<li>劉裕攻破桓玄，晉安帝短暫復位(404)</li>
+<li>桓振又迅速挾持晉安帝(404)</li>
+</ul>
+</li>
 </ul>
 <div class="mermaid">graph TB
 
