--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -47,7 +47,7 @@
 <li>哭死哭瞎：子夏、張放、孝睦皇后、趙戩</li>
 <li>嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸</li>
 <li>疽發背死：范增、劉焉、曹休</li>
-<li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之</li>
+<li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮</li>
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
 <li>跳樓：揚雄、緑珠</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
@@ -68,6 +68,7 @@
 <li>口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞</li>
 <li>狐臭：楚懷王</li>
 <li>脫髮: 王莽、曹丕</li>
+<li>酒糟鼻: 王慧龍</li>
 <li>消渴(糖尿病)：司馬相如</li>
 <li>羸瘵(肺結核)：賀循</li>
 <li>陽痿：膠西王劉端、司馬保</li>
@@ -87,7 +88,7 @@
 <li>矬：周舉、張松、朱然、宋配</li>
 <li>野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香</li>
 <li>被污早年失德：陳平、直不疑、第五倫</li>
-<li>名廚：伊尹、易牙</li>
+<li>名廚：伊尹、易牙、毛修之</li>
 <li>狗監：楊得意</li>
 <li>牧豬：公孫弘、吳祐、公沙穆</li>
 <li>弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子、汲桑</li>
