--- a/index.html
+++ b/index.html
@@ -1252,6 +1252,16 @@
 <td></td>
 <td>晉安帝6年至7年</td>
 </tr>
+<tr>
+<td>824</td>
+<td><a href="5_%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4113.html">卷113</a></td>
+<td>晉紀三十五</td>
+<td>403</td>
+<td>404</td>
+<td></td>
+<td></td>
+<td>桓楚至2年、晉安帝8年至9年</td>
+</tr>
 </tbody>
 </table>
 </details>
