更新至卷114節12
Former-commit-id: 23fb44da6414faa2b38496640b4dde40d50be115

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -121,7 +121,7 @@
 <li>著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰</li>
 <li>變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆</li>
 <li>屠伯：嚴延年、苟晞</li>
-<li>食人魔：程昱、張方、石邃、石虎、苻登、郭黁</li>
+<li>食人魔：程昱、張方、石邃、石虎、苻登、郭黁、謝混</li>
 <li>零食達人：王敦、王安石</li>
 <li>盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英</li>
 <li>裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、慕容翰、慕容超、朱棣</li>
