--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -83,7 +83,7 @@
 <li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範</li>
 <li>長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強</li>
 <li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后</li>
-<li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春</li>
+<li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人</li>
 <li>醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉</li>
 <li>矬：周舉、張松、朱然、宋配</li>
 <li>野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香</li>
@@ -162,7 +162,7 @@
 <li>自築小屋：袁閎、申屠蟠</li>
 <li>商界精英：呂不韋、孟佗</li>
 <li>被姦尸：呂后、漢桓帝馮貴人、苻訓英</li>
-<li>心動救駕：金日磾、許褚</li>
+<li>心動救駕：金日磾、許褚、叔孫俊</li>
 <li>自戀狂：何晏</li>
 <li>三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮</li>
 <li>兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛</li>
