更新至卷115節11
Former-commit-id: 96a4c0cd5cf0838603e05ac9e8e40832945f6d2a

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -80,7 +80,7 @@
 <li>舍身為民：魏咎、劉璋</li>
 <li>反戰為民：鞠彭</li>
 <li>嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃</li>
-<li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範</li>
+<li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範、徐道覆</li>
 <li>長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強</li>
 <li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后</li>
 <li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人</li>
@@ -125,7 +125,7 @@
 <li>零食達人：王敦、王安石</li>
 <li>盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英</li>
 <li>裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、慕容翰、慕容超、朱棣</li>
-<li>裝死大師：杜根</li>
+<li>裝死大師：齊桓公、杜根</li>
 <li>裝病大師：司馬懿、衛瓘、王戎</li>
 <li>裝醉大師：王允之</li>
 <li>獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、殷仲堪、蕭繹、李克用、李自成</li>
