--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -46,7 +46,7 @@
 <li>死於廁所：晉景公、韓馥</li>
 <li>哭死哭瞎：子夏、張放、孝睦皇后、趙戩</li>
 <li>嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸</li>
-<li>疽發背死：范增、劉焉、曹休</li>
+<li>疽發背死：范增、劉焉、曹休、庾悅</li>
 <li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮</li>
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
 <li>跳樓：揚雄、緑珠</li>
@@ -164,6 +164,7 @@
 <li>被姦尸：呂后、漢桓帝馮貴人、苻訓英</li>
 <li>心動救駕：金日磾、許褚、叔孫俊</li>
 <li>自戀狂：何晏</li>
+<li>睚眥必報：劉毅</li>
 <li>三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮</li>
 <li>兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛</li>
 <li>刺客不忍殺：趙盾、崔琦、蔡邕、許儒、李勢妹、姚襄</li>
