--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -57,7 +57,7 @@
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母</li>
 <li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父</li>
 <li>清醒子女：胡毋謙之、張韙</li>
-<li>坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋</li>
+<li>坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋、司馬文思</li>
 <li>救父：緹縈、馮緄</li>
 <li>被後媽虐：祖己、薛苞、蔣詡、李曇、王祥</li>
 <li>愚孝：祖己、孫性、李班</li>
@@ -156,7 +156,7 @@
 <li>萬人迷：黃憲、溫嶠</li>
 <li>死忠老外：呼尤徽、段匹磾</li>
 <li>友方中的前朝忠良∶孝平王皇后、司馬孚</li>
-<li>起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥</li>
+<li>起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟</li>
 <li>女王范兒：郭女王、袁女皇</li>
 <li>不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞</li>
 <li>自築小屋：袁閎、申屠蟠</li>
