完成卷116人物
Former-commit-id: 1a1d447cc3efc909995f6ce6ba22598a54676369

--- a/2_世系圖表/2.2_并立政權/晉/十六國/南涼世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/南涼世系圖表.html
@@ -116,6 +116,7 @@
 <h2 id="世系圖">世系圖 </h2>
 <ul>
 <li>河西鮮卑後裔，至禿髮烏孤時，不服呂光自立</li>
+<li>禿髮傉檀稱涼王，又稱臣後秦，被多方吊打，最後滅於西秦，子孫逃亡北涼，後入北魏</li>
 </ul>
 <div class="mermaid">graph TB
 
