--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -43,7 +43,7 @@
 <li>餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫、楊喬、得來、楊芷</li>
 <li>氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄、晉元帝、王遜、桓沖</li>
 <li>吐哺：周公、郗鑒</li>
-<li>死於廁所：晉景公、韓馥</li>
+<li>死於廁所：晉景公、韓馥、呂產</li>
 <li>哭死哭瞎：子夏、張放、孝睦皇后、趙戩</li>
 <li>嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸</li>
 <li>疽發背死：范增、劉焉、曹休、庾悅</li>
@@ -51,7 +51,7 @@
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
 <li>跳樓：揚雄、緑珠</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
-<li>被鬼怪嚇死：司馬懿、阮瞻、漢趙劉娥、姚萇、唐肅宗</li>
+<li>被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、唐肅宗</li>
 <li>醉死：劉曜、禿髪烏孤</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民</li>
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母</li>
@@ -102,6 +102,7 @@
 <li>神童：項橐、甘羅、孔融、曹沖、周不疑</li>
 <li>常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆</li>
 <li>反復搖擺：徐龕、王擢、十六國張平、李辯</li>
+<li>出使持節：蘇武、于什門</li>
 <li>猶豫不決：甘卓、劉牢之</li>
 <li>死前暴擊：項羽、段文鴦、冉閔</li>
 <li>強力刺客：公孫述、任尚</li>
@@ -144,6 +145,8 @@
 <li>女刺客：女艾、前秦楊皇后、張貴人</li>
 <li>誓不改嫁：夏侯令女、前秦楊皇后、呂纂楊皇后</li>
 <li>女權主義者∶程咸</li>
+<li>被姦尸：呂后、漢桓帝馮貴人、苻訓英</li>
+<li>群姦亂國：夏姬、叱洛侯少妻</li>
 <li>白眉：劉曜</li>
 <li>紅眼：劉曜</li>
 <li>重瞳：項羽、呂光、沈約、魚俱羅、朱友孜、北漢劉崇、李煜、卓岩明、明玉珍、顧炎武</li>
@@ -161,7 +164,6 @@
 <li>不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞</li>
 <li>自築小屋：袁閎、申屠蟠</li>
 <li>商界精英：呂不韋、孟佗</li>
-<li>被姦尸：呂后、漢桓帝馮貴人、苻訓英</li>
 <li>心動救駕：金日磾、許褚、叔孫俊</li>
 <li>自戀狂：何晏</li>
 <li>睚眥必報：劉毅</li>
