更新至卷118節3

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -84,7 +84,7 @@
 <li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範、徐道覆、後秦趙玄</li>
 <li>長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強</li>
 <li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后</li>
-<li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人</li>
+<li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后</li>
 <li>醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉</li>
 <li>矬：周舉、張松、朱然、宋配</li>
 <li>慫：韓馥、尉建</li>
@@ -170,6 +170,7 @@
 <li>吸毒誤國：魏道武帝、姚興</li>
 <li>自戀狂：何晏</li>
 <li>睚眥必報：劉毅</li>
+<li>端午出生：孟嘗君、王鎮惡</li>
 <li>三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮</li>
 <li>兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛</li>
 <li>刺客不忍殺：趙盾、崔琦、蔡邕、許儒、李勢妹、姚襄</li>
@@ -178,6 +179,7 @@
 <li>易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂</li>
 <li>相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾、苻堅+慕容沖</li>
 <li>替身：劉邦+紀信、祖約+閻秃</li>
+<li>讓馬：曹洪+曹操、傅武-劉曜</li>
 <li>恥做乾兒子：秦始皇+嫪毐、張綉+曹操、張遇+苻健</li>
 <li>鞭屍戳屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅、魏道武帝+慕容詳、桓玄+劉牢之</li>
 <li>被打鷄血：石遵+冉閔(努力！事成，以爾為儲貳)、朱棣+朱高煦(勉之！世子多疾)</li>
