更新至卷118節8

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -49,7 +49,7 @@
 <li>疽發背死：范增、劉焉、曹休、庾悅</li>
 <li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮</li>
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
-<li>跳樓：揚雄、緑珠</li>
+<li>跳樓：揚雄、緑珠、姚佛念</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
 <li>被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、唐肅宗</li>
 <li>醉死：劉曜、禿髪烏孤</li>
