--- a/2_世系圖表/2.2_并立政權/晉/十六國/胡夏世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/胡夏世系圖表.html
@@ -80,7 +80,7 @@
 </tr>
 <tr>
 <td>2</td>
-<td></td>
+<td>23137</td>
 <td>赫連昌</td>
 <td>425</td>
 <td>428</td>
@@ -88,7 +88,7 @@
 </tr>
 <tr>
 <td>3</td>
-<td></td>
+<td>23139</td>
 <td>赫連定</td>
 <td>428</td>
 <td>431</td>
@@ -104,6 +104,7 @@
 <li>劉衛辰反復於秦魏間，最終被北魏殺，幼子劉勃勃(赫連勃勃)逃亡</li>
 <li>赫連勃勃逃亡後秦，後秦通好北魏而叛，建立胡夏</li>
 <li>413年築統萬城，改姓赫連</li>
+<li>418年襲取長安，稱帝</li>
 </ul>
 <div class="mermaid">graph TB
 
