--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -51,7 +51,7 @@
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
 <li>跳樓：揚雄、緑珠、姚佛念</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
-<li>被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、唐肅宗</li>
+<li>被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、顔延之、唐肅宗</li>
 <li>醉死：劉曜、禿髪烏孤</li>
 <li>被子悶死：晉孝武帝、晉恭帝、嘉靖（未遂）</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民</li>
@@ -87,7 +87,7 @@
 <li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后</li>
 <li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后</li>
 <li>醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉</li>
-<li>矬：周舉、張松、朱然、宋配</li>
+<li>矬：周舉、張松、朱然、宋配、何尚之、顔延之</li>
 <li>慫：韓馥、尉建</li>
 <li>野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香</li>
 <li>被污早年失德：陳平、直不疑、第五倫</li>
@@ -119,6 +119,7 @@
 <li>暴露狂：桑扈、上官安、劉伶、張滿</li>
 <li>飆車愛好者：劉賀、宇文化及</li>
 <li>cosplay愛好者：濟東王劉彭離、漢靈帝</li>
+<li>皇帝愛做小買賣：漢靈帝、劉義符、蕭寶卷</li>
 <li>女裝大佬：曹叡、何晏、王國寶</li>
 <li>娘砲：李固、曹植、何晏、崔浩、唐伯虎</li>
 <li>僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯女生、小野妹子</li>
@@ -160,7 +161,7 @@
 <li>巨人：阮翁仲、巨毋霸</li>
 <li>魔術師：黎軒善眩人、海西幻人</li>
 <li>萬人迷：黃憲、溫嶠</li>
-<li>死忠老外：呼尤徽、段匹磾</li>
+<li>死忠老外：呼尤徽、段匹磾、楊盛</li>
 <li>友方中的前朝忠良∶孝平王皇后、司馬孚</li>
 <li>起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢、封魔奴</li>
 <li>女王范兒：郭女王、袁女皇</li>
