--- a/index.html
+++ b/index.html
@@ -25,41 +25,111 @@
       <div class="crossnote markdown-preview  ">
       
 <h1 id="資治通鑑學習筆記">資治通鑑學習筆記 </h1>
-<details>
-<summary>TODO</summary>
-筆記內圖表摘出
-後漢三國晉事件表
-晉國六卿待整理
-</details>
 <h2 id="1-數據表">1 數據表 </h2>
 <details open="">
-<summary>由書中獲取數據所形成的各類重要表格</summary>
+<summary>基於通鑑內容形成的各類基礎數據表</summary>
 <h3 id="11-通鑑目録">1.1 通鑑目録 </h3>
+<details open="">
+<summary>目録性質的數據</summary>
 <ul>
-<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.1_%E9%80%9A%E9%91%91%E7%9B%AE%E9%8C%B2/%E6%99%82%E4%BB%A3%E8%A1%A8.html">時代表</a> | <a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.1_%E9%80%9A%E9%91%91%E7%9B%AE%E9%8C%B2/%E5%8D%B7%E7%9B%AE%E8%A1%A8.html">卷目表</a> | <a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.1_%E9%80%9A%E9%91%91%E7%9B%AE%E9%8C%B2/%E7%AB%A0%E7%AF%80%E8%A1%A8.html">章節表</a></li>
+<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.1_%E9%80%9A%E9%91%91%E7%9B%AE%E9%8C%B2/%E6%99%82%E4%BB%A3%E8%A1%A8.html">時代表</a>：通鑑記録的約19個朝代的簡表</li>
+<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.1_%E9%80%9A%E9%91%91%E7%9B%AE%E9%8C%B2/%E5%8D%B7%E7%9B%AE%E8%A1%A8.html">卷目表</a>：通鑑294卷對應的年代時間表</li>
+<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.1_%E9%80%9A%E9%91%91%E7%9B%AE%E9%8C%B2/%E7%AB%A0%E7%AF%80%E8%A1%A8.html">章節表</a>：個人劃分的每卷章節內容詳表</li>
 </ul>
+</details>
 <h3 id="12-政權年代表">1.2 政權年代表 </h3>
-<ul>
-<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.2_%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E6%88%B0%E5%9C%8B%E7%A7%A6.html">戰國秦</a> | <a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.2_%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E6%BC%A2.html">漢</a> | <a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.2_%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E9%AD%8F%E6%99%89%E5%8D%97%E5%8C%97%E6%9C%9D.html">魏晉南北朝</a></li>
-<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.2_%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E5%B9%B4%E8%99%9F%E7%B8%BD%E8%A1%A8.html">年號總表</a></li>
-</ul>
+<details open="">
+<summary>以每年為行，各政權、事件為列的年代表</summary>
+<table>
+<thead>
+<tr>
+<th>時代</th>
+<th>起始年</th>
+<th>結束年</th>
+<th>涉及政權</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.2_%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E6%88%B0%E5%9C%8B%E7%A7%A6.html">戰國秦</a></td>
+<td>-475</td>
+<td>-206</td>
+<td>東周列國</td>
+</tr>
+<tr>
+<td><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.2_%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E6%BC%A2.html">漢</a></td>
+<td>-206</td>
+<td>220</td>
+<td>兩漢匈奴等</td>
+</tr>
+<tr>
+<td><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.2_%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E9%AD%8F%E6%99%89%E5%8D%97%E5%8C%97%E6%9C%9D.html">魏晉南北朝</a></td>
+<td>220</td>
+<td>589</td>
+<td>三國南北朝</td>
+</tr>
+<tr>
+<td>隋唐</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>五代</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</details>
 <h3 id="13-各類通表">1.3 各類通表 </h3>
+<details open="">
+<summary>以某種元素為單位的數據表</summary>
 <ul>
-<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E4%BA%BA%E7%89%A9%E7%B8%BD%E8%A1%A8.html">人物總表</a> | <a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E4%BA%BA%E7%89%A9%E7%B8%BD%E8%A1%A8%E5%AD%97%E6%AE%B5%E8%AA%AA%E6%98%8E.html">字段說明</a></li>
-<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E4%BA%8B%E4%BB%B6%E8%A1%A8.html">事件表</a></li>
+<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E4%BA%BA%E7%89%A9%E7%B8%BD%E8%A1%A8.html">人物總表</a>：通鑑提及的所有人物信息總表，各列信息說明詳見：<a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E4%BA%BA%E7%89%A9%E7%B8%BD%E8%A1%A8%E5%AD%97%E6%AE%B5%E8%AA%AA%E6%98%8E.html">字段說明</a></li>
+<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E4%BA%8B%E4%BB%B6%E8%A1%A8.html">事件表</a>：通鑑時代的重大歷史事件列表</li>
+<li>政權表：各類政權的信息列表</li>
+<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.2_%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E5%B9%B4%E8%99%9F%E7%B8%BD%E8%A1%A8.html">年號總表</a>：收集所有政權年號及起止年詳表，不限於通鑑，含野鷄政權</li>
 </ul>
+</details>
 </details>
 <hr>
 <h2 id="2-世系圖表">2 世系圖表 </h2>
 <details open="">
 <summary>各類世系詳圖及傳位表</summary>
 <h3 id="21-帝王">2.1 帝王 </h3>
+<details open="">
+<summary>核心統治政權</summary>
 <ul>
 <li>戰國秦：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E5%91%A8%E6%9C%9D%E4%B8%96%E7%B3%BB%E5%9C%96.html">周朝</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E6%A5%9A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">楚國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%9F%93%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">韓國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E8%B6%99%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">趙國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%AD%8F%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">魏國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E7%87%95%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">燕國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%BD%8A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">齊國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E7%A7%A6%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">秦國</a></li>
 <li>漢：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">西漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E6%9D%B1%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">東漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E5%8A%89%E9%82%A6%E4%B8%96%E7%B3%BB%E5%9C%96.html">劉邦</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E6%BC%A2%E5%85%83%E7%8E%8B%E8%8E%BD%E4%B8%96%E7%B3%BB%E5%9C%96.html">漢元王莽</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E5%85%A9%E6%BC%A2%E5%8A%89%E6%B0%8F%E4%B8%96%E7%B3%BB%E5%9C%96.html">兩漢劉氏</a></li>
 <li>魏晉：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E6%9B%B9%E9%AD%8F%E4%B8%96%E7%B3%BB%E5%9C%96.html">曹魏</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E8%9C%80%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">蜀漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E5%AD%AB%E5%90%B3%E4%B8%96%E7%B3%BB%E5%9C%96.html">孫吳</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E6%99%89%E6%9C%9D%E4%B8%96%E7%B3%BB%E5%9C%96.html">晉朝</a></li>
+<li>南北朝
+<ul>
+<li>北朝：北魏 | 東魏 | 西魏 | 北齊 | 北周</li>
+<li>南朝：劉宋 | 南齊 | 南梁 | 南陳</li>
 </ul>
+</li>
+<li>隋唐：隋 | 唐</li>
+<li>五代：後梁 | 後唐 | 後晉 | 後趙 | 後周</li>
+</ul>
+</details>
 <h3 id="22-并立政權">2.2 并立政權 </h3>
+<details open="">
+<summary>并存統治政權及野鷄政權</summary>
+<details>
+<summary>部分先秦內容可能非通鑑記載</summary>
+<ul>
+<li>先秦
+<ul>
+<li>六國：韓國 | 趙國 | 魏國 | 楚國 | 燕國 | 齊國</li>
+<li>重要國：晉國 | 魯國 | 衛國 | 鄭國</li>
+<li>其餘國：古蜀國</li>
+</ul>
+</li>
+</ul>
+</details>
 <ul>
 <li>秦朝楚漢：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E7%A7%A6%E6%9C%9D%E6%A5%9A%E6%BC%A2/%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2%E6%94%BF%E6%AC%8A.html">秦末楚漢政權表</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E7%A7%A6%E6%9C%9D%E6%A5%9A%E6%BC%A2/%E7%A7%A6%E6%9C%AB%E9%BD%8A%E5%9C%8B%E6%94%BF%E6%AC%8A%E5%9C%96.png">秦末齊國政權圖</a></li>
 <li>漢：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%BC%A2/%E6%96%B0%E6%9C%AB%E5%85%A9%E6%BC%A2%E6%94%BF%E6%AC%8A%E5%9C%96%E8%A1%A8.html">新末兩漢政權圖表</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%BC%A2/%E6%9D%B1%E6%BC%A2%E6%9C%AB%E5%B9%B4%E5%8B%A2%E5%8A%9B%E5%88%97%E8%A1%A8.html">東漢末年勢力列表</a>
@@ -79,41 +149,57 @@
 </li>
 <li>雜類
 <ul>
-<li>不計入十六國政權：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%86%89%E9%AD%8F%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">冉魏</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E7%BF%9F%E9%AD%8F%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">翟魏</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E8%A5%BF%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">西燕</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E8%AD%99%E8%9C%80%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">譙蜀</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E4%BB%87%E6%B1%A0%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">仇池</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E6%9E%97%E9%82%91%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">林邑</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%AE%95%E6%98%8C%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">宕昌</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E6%9F%94%E7%84%B6%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">柔然</a></li>
+<li>不計入十六國政權：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%86%89%E9%AD%8F%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">冉魏</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E7%BF%9F%E9%AD%8F%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">翟魏</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E8%A5%BF%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">西燕</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E8%AD%99%E8%9C%80%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">譙蜀</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E4%BB%87%E6%B1%A0%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">仇池</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E6%9E%97%E9%82%91%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">林邑</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%AE%95%E6%98%8C%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">宕昌</a></li>
 <li>諸鮮卑政權前身或部落：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E6%8B%93%E8%B7%8B%E9%AE%AE%E5%8D%91-%E6%8B%93%E8%B7%8B%E4%BB%A3%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">拓跋鮮卑-拓跋代</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E6%85%95%E5%AE%B9%E9%AE%AE%E5%8D%91%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">慕容鮮卑</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%AE%87%E6%96%87%E9%AE%AE%E5%8D%91%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">宇文鮮卑</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E6%AE%B5%E9%83%A8%E9%AE%AE%E5%8D%91%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">段部鮮卑</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E5%90%90%E8%B0%B7%E6%B8%BE%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">吐谷渾</a>|<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E8%AB%B8%E6%85%95%E5%AE%B9%E6%94%BF%E6%AC%8A%E7%B8%BD%E5%9C%96.html">諸慕容政權總圖</a></li>
 </ul>
 </li>
 </ul>
 </li>
+<li>南北朝：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%99%89/%E6%9F%94%E7%84%B6%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">柔然</a></li>
 </ul>
+</details>
 <h3 id="23-世家大族">2.3 世家大族 </h3>
+<details open="">
+<summary>影響較大的家族</summary>
 <ul>
 <li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF.html">晉國六卿</a></li>
 </ul>
-<h3 id="24-雜類圖表">2.4 雜類圖表 </h3>
+</details>
 </details>
 <hr>
 <h2 id="3-專項研究">3 專項研究 </h2>
 <details open="">
-<summary>各類專項或擴展雜項研究</summary>
+<summary>基於個人喜好的各類專項或擴展雜項研究，很多會不限於通鑑記載</summary>
 <h3 id="31-時代">3.1 時代 </h3>
+<details open="">
+<summary>針對特定時代的內容</summary>
 <ul>
-<li>秦：<a href="https://www.ageeye.cn/map/66656/">陳勝吳廣起義始末</a></li>
-<li>西漢：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%A5%9E%E5%A5%87%E7%9A%84%E9%AD%AF%E5%85%83%E5%85%AC%E4%B8%BB.png">神奇的魯元公主</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E9%96%8B%E5%9C%8B%E5%8A%9F%E8%87%A3%E5%88%97%E8%A1%A8.html">西漢開國功臣列表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%BC%B5%E9%A8%AB%E9%80%9A%E8%A5%BF%E5%9F%9F%E8%AB%B8%E5%9C%8B%E6%A6%82%E6%B3%81.html">張騫通西域諸國概況</a></li>
+<li>先秦：商鞅二十等爵表 | 楚國都城與各種郢都表 | 秦始皇關係圖 | 韓國都城變遷表 | 韓信戰役表</li>
+<li>秦：<a href="https://www.ageeye.cn/map/66656/">陳勝吳廣起義始末地圖</a></li>
+<li>西漢：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%A5%9E%E5%A5%87%E7%9A%84%E9%AD%AF%E5%85%83%E5%85%AC%E4%B8%BB.png">神奇的魯元公主</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E9%96%8B%E5%9C%8B%E5%8A%9F%E8%87%A3%E5%88%97%E8%A1%A8.html">西漢開國功臣列表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%BC%B5%E9%A8%AB%E9%80%9A%E8%A5%BF%E5%9F%9F%E8%AB%B8%E5%9C%8B%E6%A6%82%E6%B3%81.html">張騫通西域諸國概況</a>
+<ul>
+<li>詔書形式表 | 驛站交通規格表 | 鞋類型表</li>
+</ul>
+</li>
 <li>新：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E6%96%B0/%E7%8E%8B%E8%8E%BD%E5%AF%B6%E8%B2%A8%E5%88%B6.html">王莽寶貨制</a></li>
 <li>東漢：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E6%9D%B1%E6%BC%A2/%E9%9B%B2%E8%87%BA%E4%BA%8C%E5%8D%81%E5%85%AB%E5%B0%87%E8%A1%A8.html">雲臺二十八將表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E6%9D%B1%E6%BC%A2/%E7%99%BD%E7%8B%BC%E7%8E%8B%E6%AD%8C.html">白狼王歌</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E6%9D%B1%E6%BC%A2/%E9%BB%A8%E9%8C%AE%E4%B9%8B%E7%A6%8D%E4%BA%BA%E7%89%A9.png">黨錮之禍人物</a></li>
 <li>西晉：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%99%89/%E5%85%AB%E7%8E%8B%E4%B9%8B%E4%BA%82%E5%A7%8B%E6%9C%AB.html">八王之亂始末</a></li>
 <li>東晉：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E6%9D%B1%E6%99%89/%E4%BA%94%E8%83%A1%E5%8D%81%E5%85%AD%E5%9C%8B%E5%88%97%E8%A1%A8.html">五胡十六國列表</a></li>
 <li>南北朝：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E5%8D%97%E5%8C%97%E6%9C%9D/%E5%8C%97%E9%AD%8F%E6%94%B9%E5%A7%93%E5%88%97%E8%A1%A8.html">北魏改姓列表</a></li>
 </ul>
+</details>
 <h3 id="32-通用">3.2 通用 </h3>
+<details open="">
+<summary>跨越多個時代的內容</summary>
 <ul>
 <li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%B2%97%E7%B7%9A%E6%A2%9D%E6%AD%B7%E5%8F%B2%E6%9C%9D%E4%BB%A3%E8%A1%A8.html">粗線條歷史朝代表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97.html">奇葩序列</a></li>
 <li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%B9%B2%E6%94%AF%E8%A1%A8.html">干支表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E6%94%9D%E6%8F%90%E5%B0%8D%E7%85%A7%E8%A1%A8.html">攝提對照表</a></li>
 <li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%92%8C%E8%A6%AA%E5%88%97%E8%A1%A8.html">和親列表</a></li>
 <li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E8%A2%AB%E8%A9%9B%E5%92%92%E7%9A%84%E8%B6%99%E7%8E%8B.html">被詛咒的趙王</a></li>
 <li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%99%BE%E8%B6%8A%E5%90%84%E5%9C%8B.html">百越各國</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%8C%88%E5%A5%B4%E8%AA%9E%E5%B0%8D%E7%85%A7%E8%A1%A8.html">匈奴語對照表</a></li>
+<li>歷代歲首表 | 周禮宴請等級表</li>
 </ul>
+</details>
 </details>
 <hr>
 <h2 id="9-筆記">9 筆記 </h2>
@@ -1322,6 +1408,16 @@
 <td></td>
 <td></td>
 <td>晉恭帝2年、宋武帝元年至3年、劉義符元年至2年</td>
+</tr>
+<tr>
+<td>902</td>
+<td><a href="5_%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4120.html">卷120</a></td>
+<td>宋紀二</td>
+<td>424</td>
+<td>427</td>
+<td></td>
+<td></td>
+<td>劉義符3年、宋文帝元年至4年</td>
 </tr>
 </tbody>
 </table>
