文件整理，部分筆記內圖表摘出

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E4%BA%BA%E7%89%A9%E7%B8%BD%E8%A1%A8.html">人物總表</a>：通鑑提及的所有人物信息總表，各列信息說明詳見：<a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E4%BA%BA%E7%89%A9%E7%B8%BD%E8%A1%A8%E5%AD%97%E6%AE%B5%E8%AA%AA%E6%98%8E.html">字段說明</a></li>
 <li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E4%BA%8B%E4%BB%B6%E8%A1%A8.html">事件表</a>：通鑑時代的重大歷史事件列表</li>
 <li>政權表：各類政權的信息列表</li>
-<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.2_%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E5%B9%B4%E8%99%9F%E7%B8%BD%E8%A1%A8.html">年號總表</a>：收集所有政權年號及起止年詳表，不限於通鑑，含野鷄政權</li>
+<li><a href="1_%E6%95%B8%E6%93%9A%E8%A1%A8/1.3_%E5%90%84%E9%A1%9E%E9%80%9A%E8%A1%A8/%E5%B9%B4%E8%99%9F%E7%B8%BD%E8%A1%A8.html">年號總表</a>：收集所有政權年號及起止年詳表，不限於通鑑，含野鷄政權</li>
 </ul>
 </details>
 </details>
@@ -118,19 +118,13 @@
 <h3 id="22-并立政權">2.2 并立政權 </h3>
 <details open="">
 <summary>并存統治政權及野鷄政權</summary>
-<details>
-<summary>部分先秦內容可能非通鑑記載</summary>
 <ul>
 <li>先秦
 <ul>
-<li>六國：韓國 | 趙國 | 魏國 | 楚國 | 燕國 | 齊國</li>
-<li>重要國：晉國 | 魯國 | 衛國 | 鄭國</li>
-<li>其餘國：古蜀國</li>
+<li>中原：晉國 | 魯國 | 衛國 | 鄭國</li>
+<li>其他：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E5%85%88%E7%A7%A6/%E5%8F%A4%E8%9C%80%E5%9C%8B%E4%B8%96%E7%B3%BB.html">古蜀國</a></li>
 </ul>
 </li>
-</ul>
-</details>
-<ul>
 <li>秦朝楚漢：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E7%A7%A6%E6%9C%9D%E6%A5%9A%E6%BC%A2/%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2%E6%94%BF%E6%AC%8A.html">秦末楚漢政權表</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E7%A7%A6%E6%9C%9D%E6%A5%9A%E6%BC%A2/%E7%A7%A6%E6%9C%AB%E9%BD%8A%E5%9C%8B%E6%94%BF%E6%AC%8A%E5%9C%96.png">秦末齊國政權圖</a></li>
 <li>漢：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%BC%A2/%E6%96%B0%E6%9C%AB%E5%85%A9%E6%BC%A2%E6%94%BF%E6%AC%8A%E5%9C%96%E8%A1%A8.html">新末兩漢政權圖表</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.2_%E5%B9%B6%E7%AB%8B%E6%94%BF%E6%AC%8A/%E6%BC%A2/%E6%9D%B1%E6%BC%A2%E6%9C%AB%E5%B9%B4%E5%8B%A2%E5%8A%9B%E5%88%97%E8%A1%A8.html">東漢末年勢力列表</a>
 <ul>
@@ -174,7 +168,7 @@
 <details open="">
 <summary>針對特定時代的內容</summary>
 <ul>
-<li>先秦：商鞅二十等爵表 | 楚國都城與各種郢都表 | 秦始皇關係圖 | 韓國都城變遷表 | 韓信戰役表</li>
+<li>周：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E5%91%A8/%E5%95%86%E9%9E%85%E4%BA%8C%E5%8D%81%E7%AD%89%E7%88%B5%E8%A1%A8.html">商鞅二十等爵表</a> | 楚國都城與各種郢都表 | 秦始皇關係圖 | 韓國都城變遷表 | 韓信戰役表</li>
 <li>秦：<a href="https://www.ageeye.cn/map/66656/">陳勝吳廣起義始末地圖</a></li>
 <li>西漢：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%A5%9E%E5%A5%87%E7%9A%84%E9%AD%AF%E5%85%83%E5%85%AC%E4%B8%BB.png">神奇的魯元公主</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E9%96%8B%E5%9C%8B%E5%8A%9F%E8%87%A3%E5%88%97%E8%A1%A8.html">西漢開國功臣列表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%BC%B5%E9%A8%AB%E9%80%9A%E8%A5%BF%E5%9F%9F%E8%AB%B8%E5%9C%8B%E6%A6%82%E6%B3%81.html">張騫通西域諸國概況</a>
 <ul>
@@ -225,7 +219,7 @@
 <td>周紀一</td>
 <td>-403</td>
 <td>-369</td>
-<td>趙建國前世系圖、趙建國前傳位圖、魏建國前傳位圖、韓建國前傳位圖、田氏代齊前傳位圖、秦四代亂政世系圖、秦四代亂政傳位圖</td>
+<td></td>
 <td></td>
 <td>周威烈王23年至24年、周安王共26年、周烈王至7年</td>
 </tr>
@@ -235,8 +229,8 @@
 <td>周紀二</td>
 <td>-368</td>
 <td>-321</td>
-<td>齊威王時期諸田譜系</td>
-<td>商鞅二十等爵</td>
+<td></td>
+<td></td>
 <td>周顯王共48年</td>
 </tr>
 <tr>
@@ -246,7 +240,7 @@
 <td>-320</td>
 <td>-298</td>
 <td></td>
-<td>古蜀國世系</td>
+<td></td>
 <td>周慎靚王共6年、周赧王至17年</td>
 </tr>
 <tr>
