網頁工具的初步實現

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       <div class="crossnote markdown-preview  ">
       
 <h1 id="資治通鑑學習筆記">資治通鑑學習筆記 </h1>
+<blockquote>
+<p>基於數據製作的一些速查工具<br>
+<a href="./tools/era_name.html">年號查詢</a> | <a href="./tools/person.html">人物總表查詢</a></p>
+</blockquote>
 <h2 id="1-數據表">1 數據表 </h2>
 <details open="">
 <summary>基於通鑑內容形成的各類基礎數據表</summary>
