解決js腳本錯誤

--- a/index.html
+++ b/index.html
@@ -1432,6 +1432,7 @@
 <li><a href="https://mermaid-js.github.io/mermaid/#/">mermaid</a>：可嵌入markdown的圖表快速製作工具</li>
 <li><a href="https://shd101wyy.github.io/markdown-preview-enhanced/#/">markdown preview enhanced</a>：markdown插件，即時預覽及轉html</li>
 <li><a href="https://pypi.org/project/csvtotable/">csvtotable</a>：Python擴展包，csv轉html，支持分頁、搜索、排序等功能</li>
+<li><a href="https://www.codeconvert.ai/python-to-javascript-converter">codeconvert.ai</a>：可以將python腳本完美轉化為javascript</li>
 </ul>
 </li>
 </ul>
