--- a/tools/person.html
+++ b/tools/person.html
@@ -25,8 +25,7 @@
 
 <p>實現<a href="../1_數據表/1.3_各類通表/人物總表.html">人物總表</a>內的查詢功能：<br/>
 XXX -> 輸入任意姓名，查詢並列出準確的通鑑人物，以及可能的人物，以及與其相關聯的人物。<br/>
-字段名：XXX -> 以 字段名：內容 的方式查詢詞條，如輸入 統治政權：新朝 ，可列舉所有統治新朝的人物詞條。<br/>
-JavaScript腳本目前有誤，僅支持匹配精確地索引號，待修改。<br/></p>
+字段名：XXX -> 以 字段名：內容 的方式查詢詞條，如輸入 統治政權：新朝 ，可列舉所有統治新朝的人物詞條。<br/></p>
 
 <input type="text" id="searchQuery" placeholder="輸入待查詢的內容">
 <button onclick="person()">查詢</button><br><br>
