部分筆記摘出

--- a/2_世系圖表/2.1_帝王/戰國秦/周朝世系圖.html
+++ b/2_世系圖表/2.1_帝王/戰國秦/周朝世系圖.html
@@ -815,7 +815,81 @@ end
         周慎靚王--&gt;周赧王
     end
 %% end
-</div>
+</div><h2 id="西周國與東周國">西周國與東周國 </h2>
+<ul>
+<li>西周国：周考王元年始封</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>君主</th>
+<th>得位年</th>
+<th>失位年</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>西周桓公</td>
+<td>-440</td>
+<td>-415</td>
+</tr>
+<tr>
+<td>西周威公</td>
+<td>-414</td>
+<td>-367</td>
+</tr>
+<tr>
+<td>西周惠公</td>
+<td>-366</td>
+<td>0</td>
+</tr>
+<tr>
+<td>西周武公</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td>西周文公</td>
+<td>0</td>
+<td>-256</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li>东周国：由西周国分裂而出</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>君主</th>
+<th>得位年</th>
+<th>失位年</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>东周惠公</td>
+<td>-367</td>
+<td>-360</td>
+</tr>
+<tr>
+<td>东周武公</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td>东周昭文君</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td>东周君</td>
+<td>0</td>
+<td>-249</td>
+</tr>
+</tbody>
+</table>
+
       </div>
       
       
