--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <details open="">
 <summary>核心統治政權</summary>
 <ul>
-<li>戰國秦：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E5%91%A8%E6%9C%9D%E4%B8%96%E7%B3%BB%E5%9C%96.html">周朝</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E6%A5%9A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">楚國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%9F%93%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">韓國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E8%B6%99%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">趙國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%AD%8F%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">魏國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E7%87%95%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">燕國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%BD%8A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">齊國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E7%A7%A6%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">秦國</a></li>
+<li>戰國秦：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E5%91%A8%E6%9C%9D%E4%B8%96%E7%B3%BB%E5%9C%96.html">周朝</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E6%A5%9A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">楚國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%9F%93%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">韓國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E8%B6%99%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">趙國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%AD%8F%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">魏國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E7%87%95%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">燕國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%BD%8A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">齊國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E7%A7%A6%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">秦國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E8%A5%BF%E6%A5%9A%E4%B8%96%E7%B3%BB%E5%9C%96.html">西楚</a></li>
 <li>漢：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">西漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E6%9D%B1%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">東漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E5%8A%89%E9%82%A6%E4%B8%96%E7%B3%BB%E5%9C%96.html">劉邦</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E6%BC%A2%E5%85%83%E7%8E%8B%E8%8E%BD%E4%B8%96%E7%B3%BB%E5%9C%96.html">漢元王莽</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E5%85%A9%E6%BC%A2%E5%8A%89%E6%B0%8F%E4%B8%96%E7%B3%BB%E5%9C%96.html">兩漢劉氏</a></li>
 <li>魏晉：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E6%9B%B9%E9%AD%8F%E4%B8%96%E7%B3%BB%E5%9C%96.html">曹魏</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E8%9C%80%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">蜀漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E5%AD%AB%E5%90%B3%E4%B8%96%E7%B3%BB%E5%9C%96.html">孫吳</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E6%99%89%E6%9C%9D%E4%B8%96%E7%B3%BB%E5%9C%96.html">晉朝</a></li>
 <li>南北朝
@@ -160,7 +160,8 @@
 <details open="">
 <summary>影響較大的家族</summary>
 <ul>
-<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF.html">晉國六卿</a></li>
+<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF.html">晉國六卿</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E5%AD%94%E5%AD%90%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">孔子</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E7%A7%A6%E6%9C%9D%E5%90%8D%E5%B0%87%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">秦朝名將</a></li>
+<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E8%AB%B8%E5%91%82%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">諸呂</a></li>
 </ul>
 </details>
 </details>
@@ -172,11 +173,11 @@
 <details open="">
 <summary>針對特定時代的內容</summary>
 <ul>
-<li>周：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E5%91%A8/%E5%95%86%E9%9E%85%E4%BA%8C%E5%8D%81%E7%AD%89%E7%88%B5%E8%A1%A8.html">商鞅二十等爵表</a> | 楚國都城與各種郢都表 | 秦始皇關係圖 | 韓國都城變遷表 | 韓信戰役表</li>
-<li>秦：<a href="https://www.ageeye.cn/map/66656/">陳勝吳廣起義始末地圖</a></li>
+<li>周：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E5%91%A8/%E5%95%86%E9%9E%85%E4%BA%8C%E5%8D%81%E7%AD%89%E7%88%B5%E8%A1%A8.html">商鞅二十等爵表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E5%91%A8/%E6%A5%9A%E5%9C%8B%E9%83%BD%E5%9F%8E%E8%88%87%E5%90%84%E7%A8%AE%E9%83%A2%E9%83%BD%E8%A1%A8.html">楚國都城與各種郢都表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E5%91%A8/%E9%9F%93%E5%9C%8B%E9%83%BD%E5%9F%8E%E8%AE%8A%E9%81%B7%E8%A1%A8.html">韓國都城變遷表</a></li>
+<li>秦：<a href="https://www.ageeye.cn/map/66656/">陳勝吳廣起義始末地圖</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E7%A7%A6/%E7%A7%A6%E6%9C%AB%E6%BC%A2%E5%88%9D%E6%94%BF%E6%AC%8A%E9%80%97%E9%80%BC%E5%88%86%E8%A3%82%E5%9C%96.html">秦末漢初政權逗逼分裂圖</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E7%A7%A6/%E9%9F%93%E4%BF%A1%E6%88%B0%E5%BD%B9%E8%A1%A8.html">韓信戰役表</a></li>
 <li>西漢：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%A5%9E%E5%A5%87%E7%9A%84%E9%AD%AF%E5%85%83%E5%85%AC%E4%B8%BB.png">神奇的魯元公主</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E9%96%8B%E5%9C%8B%E5%8A%9F%E8%87%A3%E5%88%97%E8%A1%A8.html">西漢開國功臣列表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%BC%B5%E9%A8%AB%E9%80%9A%E8%A5%BF%E5%9F%9F%E8%AB%B8%E5%9C%8B%E6%A6%82%E6%B3%81.html">張騫通西域諸國概況</a>
 <ul>
-<li>詔書形式表 | 驛站交通規格表 | 鞋類型表</li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A9%94%E6%9B%B8%E5%BD%A2%E5%BC%8F%E8%A1%A8.html">詔書形式</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E9%A9%9B%E7%AB%99%E4%BA%A4%E9%80%9A%E8%A6%8F%E6%A0%BC%E8%A1%A8.html">驛站交通規格</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%9A%87%E5%B8%9D%E7%94%9F%E5%89%8D%E5%BB%9F%E5%90%8D.html">皇帝生前廟名</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%A4%A7%E5%A4%AB%E7%BD%AA%E5%90%8D%E8%A1%A8.html">大夫罪名</a></li>
 </ul>
 </li>
 <li>新：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E6%96%B0/%E7%8E%8B%E8%8E%BD%E5%AF%B6%E8%B2%A8%E5%88%B6.html">王莽寶貨制</a></li>
@@ -190,12 +191,11 @@
 <details open="">
 <summary>跨越多個時代的內容</summary>
 <ul>
-<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%B2%97%E7%B7%9A%E6%A2%9D%E6%AD%B7%E5%8F%B2%E6%9C%9D%E4%BB%A3%E8%A1%A8.html">粗線條歷史朝代表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97.html">奇葩序列</a></li>
-<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%B9%B2%E6%94%AF%E8%A1%A8.html">干支表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E6%94%9D%E6%8F%90%E5%B0%8D%E7%85%A7%E8%A1%A8.html">攝提對照表</a></li>
-<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%92%8C%E8%A6%AA%E5%88%97%E8%A1%A8.html">和親列表</a></li>
-<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E8%A2%AB%E8%A9%9B%E5%92%92%E7%9A%84%E8%B6%99%E7%8E%8B.html">被詛咒的趙王</a></li>
-<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%99%BE%E8%B6%8A%E5%90%84%E5%9C%8B.html">百越各國</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%8C%88%E5%A5%B4%E8%AA%9E%E5%B0%8D%E7%85%A7%E8%A1%A8.html">匈奴語對照表</a></li>
-<li>歷代歲首表 | 周禮宴請等級表</li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%B2%97%E7%B7%9A%E6%A2%9D%E6%AD%B7%E5%8F%B2%E6%9C%9D%E4%BB%A3%E8%A1%A8.html">粗線條歷史朝代表</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97.html">奇葩序列</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E8%A2%AB%E8%A9%9B%E5%92%92%E7%9A%84%E8%B6%99%E7%8E%8B.html">被詛咒的趙王</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%B9%B2%E6%94%AF%E8%A1%A8.html">干支表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E6%94%9D%E6%8F%90%E5%B0%8D%E7%85%A7%E8%A1%A8.html">攝提對照表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E6%AD%B7%E4%BB%A3%E6%AD%B2%E9%A6%96%E8%A1%A8.html">歷代歲首表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%BD%97%E6%98%9F.html">彗星</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%92%8C%E8%A6%AA%E5%88%97%E8%A1%A8.html">和親列表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%99%BE%E8%B6%8A%E5%90%84%E5%9C%8B.html">百越各國</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%8C%88%E5%A5%B4%E8%AA%9E%E5%B0%8D%E7%85%A7%E8%A1%A8.html">匈奴語對照表</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%91%A8%E7%A6%AE%E5%AE%B4%E8%AB%8B%E7%AD%89%E7%B4%9A%E8%A1%A8.html">周禮宴請等級表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%A7%A6%E6%BC%A2%E4%B8%89%E5%85%AC%E4%B9%9D%E5%8D%BF%E6%A6%82%E8%A6%81.html">秦漢三公九卿概要</a></li>
 </ul>
 </details>
 </details>
@@ -254,7 +254,7 @@
 <td>-297</td>
 <td>-273</td>
 <td></td>
-<td>楚国都城与各种郢都、西周國、東周國</td>
+<td></td>
 <td>周赧王18年至42年</td>
 </tr>
 <tr>
@@ -263,7 +263,7 @@
 <td>周紀五</td>
 <td>-272</td>
 <td>-256</td>
-<td>孔子世系簡圖(至秦)、秦始皇關系圖</td>
+<td></td>
 <td></td>
 <td>周赧王43年至59年</td>
 </tr>
@@ -274,7 +274,7 @@
 <td>-255</td>
 <td>-228</td>
 <td></td>
-<td>韓國都城變遷史</td>
+<td></td>
 <td>秦昭襄王52年至56年、秦孝文王共1年、秦莊襄王共3年、秦王政至19年</td>
 </tr>
 <tr>
@@ -283,7 +283,7 @@
 <td>秦紀二</td>
 <td>-227</td>
 <td>-209</td>
-<td>王翦家族、蒙驁家族、項燕家族</td>
+<td></td>
 <td></td>
 <td>秦始皇20年至37年、秦二世元年</td>
 </tr>
@@ -303,8 +303,8 @@
 <td>漢紀一</td>
 <td>-206</td>
 <td>-205</td>
-<td>秦末漢初政權逗逼分裂圖</td>
-<td>歷代歲首表</td>
+<td></td>
+<td></td>
 <td>楚漢至2年</td>
 </tr>
 <tr>
@@ -314,7 +314,7 @@
 <td>-204</td>
 <td>-203</td>
 <td></td>
-<td>周禮宴請等級、韓信戰役表</td>
+<td></td>
 <td>楚漢3年至4年</td>
 </tr>
 <tr>
@@ -324,7 +324,7 @@
 <td>-202</td>
 <td>-200</td>
 <td></td>
-<td>詔書形式、驛站交通規格、鞋類型</td>
+<td></td>
 <td>漢高祖5年至7年</td>
 </tr>
 <tr>
@@ -343,8 +343,8 @@
 <td>漢紀五</td>
 <td>-187</td>
 <td>-178</td>
-<td>諸呂世系圖</td>
-<td>漢惠帝掛名子嗣表</td>
+<td></td>
+<td></td>
 <td>漢高后共8年、漢文帝至2年</td>
 </tr>
 <tr>
@@ -354,7 +354,7 @@
 <td>-177</td>
 <td>-170</td>
 <td></td>
-<td>漢歷代皇帝生前廟名、大夫罪名表、各類彗星</td>
+<td></td>
 <td>漢文帝3年至10年</td>
 </tr>
 <tr>
@@ -364,7 +364,7 @@
 <td>-169</td>
 <td>-155</td>
 <td></td>
-<td>秦漢三公九卿概要</td>
+<td></td>
 <td>漢文帝11年至23年、漢景帝至2年</td>
 </tr>
 <tr>
